...
    <string name="order_invoice">Invoice Number:</string>
    <string name="order_description">Description:</string>
    <string name="order_display_title">These Orders Have Not Been Placed In A While:</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">No account? Sign Up!</string>
    <string name="register">Register</string>
</resources>

